have sort of what i want, but i feel it could be more efficient, do i need to add things like delta time corrections?

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     </style>
 </head>
 <body>
+    <h2> Loading </h2>
     <canvas id="c" height="200" width="200"> </canvas>
     <script src="index.js"> </script>
 </body>
