happy with way i've refactored code to account for/make up for difference in ms between request animation frame intervals, i think some further optimisations can potentially be made to make code run a bit faster yet

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
         <button id="destroy"> destroy </button>
     </div>
 
+<!--    <input-->
+
     <script src="spinner.js"> </script>
     <script src="demo.js"> </script>
 </body>
